# languageserver-python

./: Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
languageserver/: __init__.py
languageserver/protocol/: flags.py  notifications.py  params.py  requests.py  results.py  types.py
languageserver/server/: __init__.py  registry.py
languageserver/transport/: pipe.py  socket.py  stdio.py
